# translate-api

./: Dockerfile  README.md  main.py  pyproject.toml
demo/: demo.md
tests/: test_translations.py
