[project]
name = "translate-api"
version = "0.1.0"
description = "Airgaped translations"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "ctranslate2>=4.7.1",
    "fastapi[standard]>=0.128.2",
    "transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "torch>=2.10.0",
]
